# voltshark

./: .gitignore  Cargo.toml  PLAN.md  README.md  memory.x
.cargo/: config.toml
hardware/: README.md
memory/: link.x
scripts/: build.sh
src/: envelope.rs  filter.rs  main.rs  midi.rs  oscillator.rs  patch.rs  voice.rs
src/audio/: i2s.rs  mod.rs
src/board/: config.rs
src/midi/: parser.rs
src/synth/: dsp.rs  engine.rs  mod.rs
